--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.0",
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash.debounce": "^4.0.8",
+    "mongoose": "^8.13.1",
     "path": "^0.12.7",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
+    "react-to-print": "^3.0.5",
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
