--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
