--- a/package.json
+++ b/package.json
@@ -12,34 +12,36 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
-    "@tailwindcss/vite": "^4.1.0",
+    "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "mongoose": "^8.13.1",
+    "mongoose": "^8.13.2",
     "path": "^0.12.7",
-    "react": "^19.0.0",
-    "react-datepicker": "^8.2.1",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1",
-    "react-to-print": "^3.0.5",
-    "tailwindcss": "^4.1.0"
+    "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.0",
+    "react-to-print": "^3.0.6",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@eslint/js": "^9.24.0",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint": "^9.24.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
+    "globals": "^16.0.0",
     "nodemon": "^3.1.9",
-    "vite": "^6.2.0"
+    "vite": "^6.2.6"
   }
 }
