--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
     "react-to-print": "^3.0.6",
+    "sonner": "^2.0.3",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
