--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-to-print": "^3.0.6",
     "sonner": "^2.0.3",
